<resources>
    <string name="app_name">SALESAPP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="txt_login_email_hint">email</string>
    <string name="txt_login_password_hint">password</string>
    <string name="txt_forget_password">Forget Password</string>
    <string name="email_empty_alert">Please enter email</string>
    <string name="password_empty_alert">Please enter password</string>
    <string name="unvalid_input_email">Enter correct Email</string>
    <string name="unvalid_input_password">password must be 6 characters at least</string>
    <string name="logout">Logout</string>
    <string name="daily_sales_report">Daily Sales Report</string>
    <string name="sales_screen">Sales Screen</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="txt_confirm">Confirm</string>
    <string name="logout_alert">Are you sure you want to sign out?</string>
    <string name="customer_email">Customer Email</string>
    <string name="item_name">Item Name</string>
    <string name="qty">Qty</string>
    <string name="hash">#</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="save_email"><![CDATA[Save & Email]]></string>
    <string name="save">Save</string>
    <string name="item">Item</string>
    <string name="databaseinserted">Database Inserted</string>
    <string name="nomail">Failed</string>
    <string name="nodata">No data saved</string>
    <string name="emptydata">Empty Data</string>
    <string name="total">Total</string>
    <string name="totalsales">Total Sales</string>
    <string name="_5000">5000</string>
    <string name="totalpriceofitems">Total Price Of Items</string>
    <string name="sendmal">Send mail…</string>
    <string name="sendviamail">send via mail</string>
    <string name="date">Date</string>
</resources>
