<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_above="@id/bottom_layout">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="48dp"
                android:text="@string/customer_email"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="32dp"
                android:text="@string/item_name"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="510dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_begin="154dp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ed_customer_email"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_border"
                android:drawableLeft="@drawable/mail_icn"
                android:drawablePadding="5dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.507" />

            <EditText
                android:id="@+id/ed_item_type"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_border"
                android:drawableLeft="@drawable/password_icn"
                android:drawablePadding="5dp"
                android:ems="10"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.507" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/qty"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/ed_qty"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/hash"
                android:inputType="number"
                android:padding="5dp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                app:layout_constraintStart_toEndOf="@id/ed_qty"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/ed_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_border"
                android:drawablePadding="5dp"
                android:ems="10"
                android:inputType="number"
                android:padding="5dp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_bacground"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_price" />

            <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@color/Gray">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:background="@drawable/edittext_border"
                        android:gravity="center"
                        android:text="@string/item"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@drawable/edittext_border"
                        android:gravity="center"
                        android:text="@string/qty"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@drawable/edittext_border"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/price"
                        android:textColor="@android:color/white" />

                </TableRow>

                <!--<TableRow
                    android:id="@+id/table_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/TransGray"
                    android:layout_weight="0.9"
                    >
                    <TextView
                        android:id="@+id/tv_item"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:background="@drawable/edittext_border"
                        android:gravity="center"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tv_qty"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:background="@drawable/edittext_border"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:background="@drawable/edittext_border"
                        android:gravity="center"
                        android:padding="7dp"
                        android:textColor="@android:color/black"/>

                </TableRow>-->

            </TableLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:text="@string/total"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/table_layout" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.0" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/bottom_layout"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/edittext_border"
            android:text="@string/save"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_save_and_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/edittext_border"
            android:text="@string/save_email"
            android:textAllCaps="false" />
    </LinearLayout>

</RelativeLayout>